[package]
name = "twinleaf-core"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Core tasks utilizing the Twinleaf I/O protocol for reading data from Twinleaf quantum sensors." 
homepage = "https://twinleaf.com"
repository = "https://github.com/twinleaf/twinleaf-rust"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
crossbeam = "0.8.4"
crossterm = {version = "0.29.0"}
getopts = "0.2.21"
serialport = "4.5.1"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"
toml_edit = {version = "0.22.24", features = ["parse"]}
twinleaf = { version = "1.3.1", path = "../twinleaf" }
