[package]
name = "twinleaf"
version = "1.8.0"
edition = "2021"
license = "MIT"
description = "Library for working with the Twinleaf I/O protocol and Twinleaf quantum sensors."
homepage = "https://twinleaf.com"
repository = "https://github.com/twinleaf/twinleaf-rust"
readme = "README.md"

[features]
default = ["serial"]
serial = ["dep:mio-serial", "dep:serialport"]
hdf5 = ["dep:hdf5"]

[dependencies]
crossbeam = "0.8"
crc = "3.2"
num_enum = "0.7"
glob = "0.3"
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["static", "zlib", "blosc"], optional = true}
directories = "6.0"
thiserror = "2"
mio-serial = { version = "5.0", optional = true }
serialport = { version = "4.9", optional = true }

[dependencies.mio]
version = "1.0"
features = ["os-poll", "net"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Devices_Communication",
  "Win32_System_Power"
] }
